# storage/api-docs/api-docs.json
@@ -1633,6 +1633,299 @@
                 ]
             }
         },
+        "/admin/village/get": {
+            "get": {
+                "tags": [
+                    "GEOGRAPHIC-VILLAGE"
+                ],
+                "summary": "get paginated village",
+                "description": "get paginated village",
+                "operationId": "getAllVillagePaginated",
+                "parameters": [
+                    {
+                        "name": "searchText",
+                        "in": "query",
+                        "description": "search by name",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "description": "number of village per page",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "page number",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "201": {
+                        "description": "Successful Insert operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/admin/village/insert": {
+            "post": {
+                "tags": [
+                    "GEOGRAPHIC-VILLAGE"
+                ],
+                "summary": "insert a village",
+                "description": "insert a village",
+                "operationId": "insertVillage",
+                "requestBody": {
+                    "description": "enter inputs",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "division_id": {
+                                        "description": "id of division",
+                                        "type": "text"
+                                    },
+                                    "district_id": {
+                                        "description": "id of district",
+                                        "type": "text"
+                                    },
+                                    "thana_id": {
+                                        "description": "id of thana",
+                                        "type": "text"
+                                    },
+                                    "union_id": {
+                                        "description": "id of union",
+                                        "type": "text"
+                                    },
+                                    "ward_id": {
+                                        "description": "id of ward",
+                                        "type": "text"
+                                    },
+                                    "name_en": {
+                                        "description": "english name of the village",
+                                        "type": "text"
+                                    },
+                                    "name_bn": {
+                                        "description": "bangla name of the village",
+                                        "type": "text"
+                                    },
+                                    "code": {
+                                        "description": "code of the village",
+                                        "type": "text"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "201": {
+                        "description": "Successful Insert operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/admin/village/update": {
+            "post": {
+                "tags": [
+                    "GEOGRAPHIC-VILLAGE"
+                ],
+                "summary": "update a village",
+                "description": "update a village",
+                "operationId": "villageUpdate",
+                "requestBody": {
+                    "description": "enter inputs",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "description": "id of the village",
+                                        "type": "integer"
+                                    },
+                                    "division_id": {
+                                        "description": "id of division",
+                                        "type": "text"
+                                    },
+                                    "district_id": {
+                                        "description": "id of district",
+                                        "type": "text"
+                                    },
+                                    "thana_id": {
+                                        "description": "id of thana",
+                                        "type": "text"
+                                    },
+                                    "union_id": {
+                                        "description": "id of union",
+                                        "type": "text"
+                                    },
+                                    "ward_id": {
+                                        "description": "id of ward",
+                                        "type": "text"
+                                    },
+                                    "name_en": {
+                                        "description": "english name of the village",
+                                        "type": "text"
+                                    },
+                                    "name_bn": {
+                                        "description": "bangla name of the village",
+                                        "type": "text"
+                                    },
+                                    "code": {
+                                        "description": "code of the village",
+                                        "type": "text"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "201": {
+                        "description": "Successful Insert operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/admin/village/destroy/{id}": {
+            "get": {
+                "tags": [
+                    "GEOGRAPHIC-VILLAGE"
+                ],
+                "summary": "destroy village",
+                "description": "Returns village destroy by id",
+                "operationId": "destroyVillage",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of village to return",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found!"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/admin/role/all/filtered": {
             "get": {
                 "tags": [
